# verse

./: CMakeLists.txt
cmake/: Findgcovr.cmake  gtest.cmake
docs/: Doxyfile.in
include/debug/: backtrace.h
source/: CMakeLists.txt
source/debug/: backtrace.cpp
test/: CMakeLists.txt  example_test.cpp
